<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyActivity">

    <!--Survey Components-->

    <!--Radio group for Questions 1-9-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginBottom="480dp"
        android:background="#673AB7"
        app:layout_constraintBottom_toTopOf="@+id/btnNextQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Custom Back to Home Button -->
        <ImageButton
            android:id="@+id/btnBackToHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/back"
            android:contentDescription="@string/back" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="112dp"
        android:text="@string/progress_bar"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/progressBarSurvey"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAnswers" />

    <TextView
        android:id="@+id/txtSurveyHeader"
        android:layout_width="297dp"
        android:layout_height="61dp"
        android:layout_marginTop="41dp"
        android:text="@string/survey_header"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSurveyHello" />

    <RadioGroup
        android:id="@+id/radioGroupAnswers"
        android:layout_width="215dp"
        android:layout_height="191dp"
        android:layout_marginTop="41dp"
        android:contextClickable="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSurveyPrompt">

        <RadioButton
            android:id="@+id/radioChoice0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/white"
            android:text="@string/zero" />

        <RadioButton
            android:id="@+id/radioChoice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/white"
            android:text="@string/one" />


        <RadioButton
            android:id="@+id/radioChoice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/white"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/radioChoice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/white"
            android:text="@string/three" />

        <!--The answer choices for question 10-->
        <RadioButton
            android:id="@+id/q10Choice0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/white"
            android:text="@string/not_difficult"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/q10Choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/white"
            android:text="@string/somewhat_difficult"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/q10Choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/white"
            android:text="@string/very_difficult"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/q10Choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:buttonTint="@color/white"
            android:text="@string/extreme_difficult"
            android:visibility="gone" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtSurveyPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:maxWidth="250dp"
        android:text="@string/begin_survey"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupAnswers"
        app:layout_constraintStart_toStartOf="@+id/radioGroupAnswers"
        app:layout_constraintTop_toBottomOf="@+id/txtSurveyHeader" />

    <Button
        android:id="@+id/btnNextQuestion"
        android:layout_width="87dp"
        android:layout_height="52dp"
        android:layout_marginBottom="143dp"
        android:text="@string/next_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <Button
        android:id="@+id/btnPreviousQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="327dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="72dp"
        android:text="@string/previous_question"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/progressBarSurvey"
        app:layout_constraintEnd_toStartOf="@+id/btnNextQuestion"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSurveyHeader"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtSurveyHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtSurveyHeader"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <ProgressBar
        android:id="@+id/progressBarSurvey"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProgress" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="251dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup4"
        app:layout_constraintGuide_begin="-27dp"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtSurveyHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />
</androidx.constraintlayout.widget.ConstraintLayout>