<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral30"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtHomeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/txtInitialPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtInitialPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/initial_prompt"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBegin"
        android:layout_width="173dp"
        android:layout_height="79dp"
        android:layout_marginTop="96dp"
        android:text="@string/begin_survey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtID" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="43dp"
        android:background="@color/material_dynamic_neutral95"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtName"
        app:layout_constraintTop_toTopOf="@+id/edtName" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="9dp"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edtDate"
        app:layout_constraintStart_toStartOf="@+id/edtDate" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="18dp"
        android:background="@color/material_dynamic_neutral95"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/txtID"
        app:layout_constraintEnd_toStartOf="@+id/edtDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtName" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="53dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/txtInitialPrompt" />

    <EditText
        android:id="@+id/edtID"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="44dp"
        android:background="@color/material_dynamic_neutral95"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBegin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDate" />

    <TextView
        android:id="@+id/txtID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:text="@string/id"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edtID"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

</androidx.constraintlayout.widget.ConstraintLayout>